# tagblaze

./: LICENSE  README.md
server/: .env  .env.example  Cargo.toml  sea-orm-cli.toml
server/docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
server/docs/tagblaze/: tagblaze-desc-0-.js
server/src/: config.rs  lib.rs  main.rs
server/src/db/: db.rs  mod.rs
server/src/handlers/: admin.rs  auth.rs  mod.rs  relations.rs  tag.rs  ticket.rs  user.rs
server/src/models/: mod.rs  prelude.rs  tag.rs  ticket.rs  ticket_tag.rs  user.rs
server/src/routes/: admin.rs  auth.rs  health.rs  mod.rs  relations.rs  tag.rs  ticket.rs
server/src/tests/: health.rs
server/src/utils/: auth.rs  jwt.rs  mod.rs
