[package]
name = "tagblaze"
version = "0.1.0"
edition = "2024"
description = "A blazing fast ticket-tag management system in Rust using Axum and SeaORM."
license = "MIT"
repository = "https://github.com/DEBANSU244688/tagblaze"
documentation = "https://debansu244688.github.io/tagblaze/"
readme = "README.md"
keywords = ["rust", "axum", "seaorm", "ticketing", "webapi"]
categories = ["web-programming::http-server", "development-tools::testing"]

[dependencies]
axum = "0.8"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"

tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
bcrypt = "0.17"

jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde", "clock"] }
headers = "0.4"

axum-extra = { version = "0.10", features = ["typed-header"] }
futures = "0.3"